[package]
name = "mock_instant"
version = "0.2.1"
authors = ["museun <museun@outlook.com>"]
edition = "2018"
license = "0BSD"
readme = "README.md"
keywords = ["mock", "test", "time", "instant"]
description = "a simple way to mock an std::time::Instant"
documentation = "https://docs.rs/mock_instant"
repository = "https://github.com/museun/mock_instant"

[features]
default = []
sync = ["once_cell"]

[dependencies]
once_cell = { version = "1.4", optional = true }
